# boilerplate-grpc

./: CMakeLists.txt  README.md  grpc.cmake  vcpkg.json
include/mib/: base.h
protos/: echo.proto
src/: application.cc  application.cpp  application.h  application.hpp  cmd.h  cmd.hpp  cmd_print.cc  cmd_print.cpp  cmd_send.cc  cmd_start.cc  echo_client.cc  echo_client.h  echo_server.cc  main.cc  main.cpp  service.h
src/mib/: base.cc  base.cpp
